[gd_scene load_steps=4 format=2]

[ext_resource path="res://resources/Slider-CL01-Background.png" type="Texture" id=1]
[ext_resource path="res://resources/Button.png" type="Texture" id=2]
[ext_resource path="res://Menu.gd" type="Script" id=3]

[node name="Node2D" type="Node2D"]
script = ExtResource( 3 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 523.4, 314.153 )
scale = Vector2( 0.775883, 0.672351 )
texture = ExtResource( 1 )

[node name="MasaLabel" type="Label" parent="."]
margin_left = 365.0
margin_top = 215.0
margin_right = 403.0
margin_bottom = 230.0
rect_pivot_offset = Vector2( -315.5, -117.5 )
text = "Masa"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MasaVal" type="Label" parent="."]
margin_left = 592.188
margin_top = 216.18
margin_right = 632.188
margin_bottom = 230.18
rect_pivot_offset = Vector2( -315.5, -117.5 )
text = "0"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="FricLabel" type="Label" parent="."]
margin_left = 364.214
margin_top = 233.265
margin_right = 414.214
margin_bottom = 247.265
rect_pivot_offset = Vector2( -315.5, -117.5 )
text = "Fricci√≥n"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="FricVal" type="Label" parent="."]
margin_left = 591.688
margin_top = 233.265
margin_right = 641.688
margin_bottom = 247.265
rect_pivot_offset = Vector2( -315.5, -117.5 )
text = "0"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ThetaLabel" type="Label" parent="."]
margin_left = 364.214
margin_top = 252.765
margin_right = 404.214
margin_bottom = 266.765
text = "Theta"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ThetaVal" type="Label" parent="."]
margin_left = 591.688
margin_top = 251.821
margin_right = 631.688
margin_bottom = 265.821
text = "0"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MasaSlider" type="HSlider" parent="."]
margin_left = 430.89
margin_top = 214.68
margin_right = 587.89
margin_bottom = 230.68
max_value = 500.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="FriccionSlider" type="HSlider" parent="."]
margin_left = 431.013
margin_top = 234.152
margin_right = 588.013
margin_bottom = 250.152
max_value = 1.0
step = 0.01
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ThetaSlider" type="HSlider" parent="."]
margin_left = 431.311
margin_top = 251.265
margin_right = 588.311
margin_bottom = 267.265
max_value = 90.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureButton" type="TextureButton" parent="."]
margin_left = 381.756
margin_top = 400.655
margin_right = 611.756
margin_bottom = 473.655
texture_normal = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="TextureButton"]
margin_left = 80.9575
margin_top = 30.9543
margin_right = 144.957
margin_bottom = 44.9543
text = "Comenzar"
[connection signal="pressed" from="TextureButton" to="." method="_on_TextureButton_pressed"]
